allprojects {
    apply plugin: 'java'
    apply plugin: "maven"

    group 'dev.migwel.chesscomjava'
    version '1.0-SNAPSHOT'

    sourceCompatibility = 15

    repositories {
        mavenCentral()
    }

    tasks.withType(JavaCompile).each {
        it.options.compilerArgs.add('--enable-preview')
    }

    dependencies {
        implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
        implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
        testImplementation 'org.mockito:mockito-core:2.+'
        testImplementation('org.junit.jupiter:junit-jupiter:5.4.0')
    }

    test {
        useJUnitPlatform()
        jvmArgs(['--enable-preview'])
    }
}
